# Epidemiology-AI

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  test_api.bat
.antigravity/: QWEN.md
documentation/: API_TESTING.md  DATASET.md  DATA_STRATEGY.md  IMPACT.md  IMPLEMENTATION_COMPLETE.md  ML_FLOW.md  PRD.md  Problem statement.md  QUICKSTART.md  api-usage.md  backend_architecture.md  data-guide.md  data_sources.md  development_timeline.md  frontend_ux_design.md  goals.md  mind_map.md  presentation_outline.md  setup-guide.md  system_architecture.md  task.md  tech_stack.md  timeline_milestones.md
frontend/: index.html  package-lock.json  package.json
migrations/: env.py
migrations/versions/: 038807336256_initial_migration.py  60c73cc76a81_add_timescale_hypertables.py
models/: dengue_outbreak_predictor.pkl
notebooks/: dengue_outbreak_prediction.ipynb
notebooks/.ipynb_checkpoints/: dengue_outbreak_prediction-checkpoint.ipynb
scripts/: alert_scheduler.py  init_db.py
src/: __init__.py  app.py
src/api/: __init__.py  dependencies.py  schemas.py
src/api/routes/: __init__.py  alerts.py  analytics.py  auth.py  diseases.py  health.py  ingestion.py  model.py  predictions.py  regions.py
src/core/: celery_app.py  config.py  exceptions.py  security.py
src/database/: __init__.py  core.py  models.py
src/models/: __init__.py  predictor.py  service.py
src/services/: __init__.py  tasks.py
src/services/etl/: __init__.py  loader.py  pipeline.py  service.py
src/services/ingestion/: __init__.py  base.py  digital_signals.py  disease.py  weather.py
tests/: conftest.py  test_alerts.py  test_auth.py  test_diseases_regions.py  test_etl_pipeline.py  verify_auth_alert.py  verify_db.py
