[project]
name = "epidemiology-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt>=4.2.1",
    "black==26.1.0",
    "celery>=5.4.0",
    "email-validator>=2.1.0",
    "fastapi>=0.128.0",
    "flake8==7.3.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.2.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pytrends>=4.9.0",
    "redis>=5.0.0",
    "requests>=2.32.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
